Enforce vertical scroll to prevent jitter across page jumps

--- a/assets/common/css/default.css
+++ b/assets/common/css/default.css
@@ -26,6 +26,7 @@ body, html { font-size: 100%; 	padding: 0; margin: 0;}
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #47a3da;
+    overflow-y: scroll;  // enfore scroll so actual view does not 'jitter' between page jumps
 }
 
 a {
